--- a/repos/analise/analise/appsettings.json
+++ b/repos/analise/analise/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "analiseContext": "Server=(localdb)\\mssqllocaldb;Database=analiseContext-025a8123-3e03-4c67-b2f4-78c7ac87b304;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
