Adaptação para MySQL e primeira migration

--- a/repos/analise/analise/appsettings.json
+++ b/repos/analise/analise/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "analiseContext": "Server=(localdb)\\mssqllocaldb;Database=analiseContext-025a8123-3e03-4c67-b2f4-78c7ac87b304;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "analiseContext": "server=localhost;userid=root;password=123456;database=saleswebmvcappdb"
+
   }
 }
